# unreal-engine-mcp

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.json  .mise.toml  .pre-commit-config.yaml  .vale.ini  .yamllint  CHANGELOG.md  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yml  scenectl.cmd
Python/: README_advanced.md  _check_scene.py  pyproject.toml  unreal_mcp_server_advanced.py
Python/assets/: asset_catalog.yaml
Python/helpers/: actor_name_manager.py  actor_utilities.py  advanced_buildings.py  bridge_aqueduct_creation.py  building_creation.py  castle_creation.py  fake_unreal_connection.py  house_construction.py  infrastructure_creation.py  mansion_creation.py  tower_creation.py
Python/helpers/blueprint_graph/: connector_manager.py  event_manager.py  function_manager.py  node_deleter.py  node_manager.py  node_properties.py  variable_manager.py
Python/scripts/: demo_react_for_ue.py  dump_capabilities.py
Python/server/: __init__.py  actor_sink.py  actor_tools.py  ai_nav_extension_tools.py  ai_navigation_tools.py  anim_rigging_tools.py  animation_tools.py  asset_import_tools.py  audio_tools.py  blueprint_graph_tools.py  blueprint_tools.py  cave_metrics.py  cesium_tools.py  chaos_tools.py  core.py  cpp_tools.py  data_table_extension_tools.py  data_table_tools.py  dialog_tools.py  foliage_tools.py  gas_tools.py  landscape_tools.py  localization_tools.py  material_graph_tools.py  material_tools.py  mesh_editing_tools.py  metasound_tools.py  mobile_xr_tools.py  movie_render_queue_tools.py  networking_tools.py  niagara_tools.py  packaging_extension_tools.py  pcg_tools.py  physics_tools.py  rendering_tools.py  scene_cave_tools.py  scene_client.py  scene_crud_tools.py  scene_job_tools.py  scene_layout_tools.py  (+14 more)
Python/server/agents/: __init__.py  ab_comparison.py  agent_card.py  base_agent.py  collaboration.py  guardrails.py  master_orchestrator.py  memory.py  planner.py  refinement_compiler.py  refinement_orchestrator.py  resilience.py  tracing.py
Python/server/agents/domain_agents/: __init__.py  animation_domain_agent.py  (+20 more)
Python/server/analysis_tools/: ci_cd_tools.py  cpp_blueprint_analyzer.py  gdd_tools.py  project_analyzer.py
Python/server/experts/: __init__.py  atmosphere_expert.py  audio_expert.py  base_expert.py  cave_expert.py  expert_router.py  lighting_expert.py  material_expert.py  mood_profiles.py  postprocess_expert.py  vfx_expert.py
Python/server/generation/: __init__.py  cave_graph_generator.py  geometry.py  lsystem.py  mesh_payload.py  sdf.py  sdf_cave_field.py  superformula.py  wfc.py
Python/server/generators/: __init__.py  capital_city.py  castle.py
Python/server/intent/: __init__.py  intent_resolver.py  intent_types.py  scene_context.py  scene_summarizer.py  target_resolver.py
Python/server/planning/: __init__.py  capability_registry.py  design_patch.py  patch_compiler.py  patch_executor.py  safety.py
Python/server/protocols/: __init__.py  base_scene_protocol.py  cave_scene_protocol.py  city_scene_protocol.py  forest_scene_protocol.py  room_scene_protocol.py
Python/server/quality/: __init__.py  cave_math_metrics.py  quality_gate.py  quality_vector.py
Python/server/specs/: __init__.py  actor_spec.py  asset_resolver.py  asset_spec.py  component_spec.py  entity_spec.py  graph.py  realization_spec.py  relation_spec.py
Python/server/vision/: __init__.py  critique_engine.py  screenshot.py  vision_analyzer.py  visual_metrics.py
Python/tests/: conftest.py
Python/tests/benchmarks/: __init__.py  bench_castle_full.py  bench_metrics.py  conftest.py
Python/tests/contract/: __init__.py  test_react_for_ue_v3_contract.py  test_response_envelope.py  test_retry_and_reconnect.py  test_socket_fragmentation.py
Python/tests/e2e/: conftest.py  test_agent_integration_mocked.py  test_agent_system.py  test_agent_system_standalone.py  test_castle_generation.py  test_cave_creepy.py  test_critique_refinement_loop.py  test_instance_set_sync.py  test_lighting_e2e.py  test_material_e2e.py  test_osaka_castle.py  test_p7_e2e.py  test_phase1_procedural_generation.py  test_phase23_handler_split_smoke.py  test_procedural_mesh_e2e.py  test_refine_loop.py  test_scale_idempotency.py  test_scene_observation.py  test_scene_sync_batch.py  test_scene_sync_lifecycle.py  test_snapshot_restore_by_name.py  test_water_e2e.py  test_wfc_semantic_hism_pipeline.py  verify_large_mesh.py
Python/tests/fixtures/: intent_fixtures.json
Python/tests/integration/: test_hybrid_coexistence.py  test_kpi.py  test_patch_executor.py  test_python_to_unreal_flows.py  test_tasks_1_2_hardening.py
Python/tests/unit/: test_actor_name_manager.py  test_actor_sink.py  test_actor_tools_w1e.py  test_agent_card.py  test_agent_collaboration.py  test_ai_nav_extension_tools.py  test_ai_tools_w1d.py  test_anim_rigging_tools.py  test_audio_tools_w1c.py  test_audit_no_new_queued.py  test_batch_spawn_and_world_tools.py  test_blueprint_graph_helpers.py  test_blueprint_tools_w1c.py  test_capability_registry.py  test_castle_generator.py  test_cave_math_metrics.py  test_chaos_tools.py  test_connection.py  test_connection_receive_response.py  test_cpp_tools.py  test_data_table_extension_tools.py  test_data_table_tools_w1b.py  test_design_patch.py  test_dialog_tools.py  test_dialog_tools_ambiguity.py  test_docs_consistency.py  test_envelope_helpers.py  test_experts.py  test_fold_changelog_fragments.py  test_foliage_tools.py  test_gas_tools.py  test_guardrails.py  test_intent_resolver_fixtures.py  test_landscape_tools.py  test_live_e2e_smoke_grouping.py  test_localization_tools.py  test_material_tools_w1c.py  test_material_w1_42.py  test_memory.py  test_mesh_editing_tools.py  (+74 more)
Python/tools/: commands.yaml  generate_codegen.py
Python/utils/: __init__.py  envelope.py  responses.py
rust/scene-syncd/: Cargo.toml  deny.toml
rust/scene-syncd/benches/: compile_pipeline.rs  plan_sync.rs  validate_scene.rs
rust/scene-syncd/src/: config.rs  error.rs  lib.rs  main.rs
rust/scene-syncd/tests/: db_integration.rs
(+424 files in other folders)
