[project]
name = "unreal-engine-mcp"
version = "0.1.0"
description = "Unreal MCP Advanced Server: A streamlined server for advanced Unreal Engine composition and building tools via MCP."
readme = "README_advanced.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "mcp[cli]>=1.4.1",
  "fastmcp>=0.2.0",
  "uvicorn",
  "fastapi",
  "pydantic>=2.6.1",
  "requests"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.14",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["unreal_mcp_server_advanced"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "helpers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["helpers", "server", "unreal_mcp_server_advanced.py"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError"
]
