[project]
name = "unreal-engine-mcp"
version = "0.1.0"
description = "Unreal MCP Advanced Server: A streamlined server for advanced Unreal Engine composition and building tools via MCP."
readme = "README_advanced.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "mcp[cli]>=1.4.1",
  "fastmcp>=0.2.0",
  "uvicorn",
  "fastapi",
  "pydantic>=2.6.1",
  "requests",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.14",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "pytest-xdist>=3.6",
  "mypy>=1.10",
  "basedpyright>=1.28",
  "types-PyYAML",
  "types-requests",
  "ruff>=0.11.0",
  "hypothesis>=6.100",
  "deptry>=0.20",
  "pip-audit>=2.7",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["unreal_mcp_server_advanced"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "helpers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = "requires_unreal: test needs a running Unreal Editor"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["helpers", "server", "unreal_mcp_server_advanced.py"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError"
]

[tool.mypy]
# Light-touch mypy configuration for the server package.
# The codebase is heavily duck-typed against MCP/FastMCP, so strict mode is
# intentionally not enabled yet; this configuration catches concrete bugs.
python_version = "3.10"
files = ["server", "helpers"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
follow_imports = "silent"
no_implicit_optional = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[dependency-groups]
dev = [
    "pillow>=12.2.0",
]

# ── Ruff: Python リンター + フォーマッタ ──
[tool.ruff]
line-length = 120
target-version = "py310"
src = ["server", "helpers", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific
]
ignore = [
    "N802",  # function name should be lowercase (UE API uses PascalCase)
    "N803",  # argument name should be lowercase
    "N806",  # variable in function should be lowercase
    "N815",  # mixedCase variable in class scope
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806", "N815", "N816", "S101"]
"scripts/*" = ["N802", "N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ── bandit: Python セキュリティスキャナ ──
[tool.bandit]
targets = ["server", "helpers"]
skips = ["B101", "B303", "B311", "B404", "B603", "B607"]
confidence = "medium"
severity = "medium"

# ── Hypothesis: プロパティベーステスト設定 ──
[tool.hypothesis]
philosophy = "quality"
max_examples = 100
stateful_step_count = 50
derandomize = false
suppress_health_check = []

# ── deptry: 未使用依存関係チェック ──
[tool.deptry]
ignore = [
    "mcp",
    "fastmcp",
    "uvicorn",
    "fastapi",
]
