[package]
name = "scene-syncd"
version = "0.1.0"
edition = "2021"
description = "SurrealDB-backed desired-state sync service for Unreal MCP"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
surrealdb = { version = "2", features = ["kv-mem"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
ulid = "1"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }