[package]
name = "scene-syncd"
version = "0.1.0"
edition = "2021"
description = "SurrealDB-backed desired-state sync service for Unreal MCP"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
glam = { version = "0.30", features = ["serde"] }
geo = "0.32"
robust = "1"
rstar = "0.12"
async-trait = "0.1"
async-stream = "0.3"
petgraph = "0.8"
surrealdb = { version = "=2.2.2", features = ["kv-mem"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
ulid = "1"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
crc32fast = "1.5.0"
rayon = "1.10"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compile_pipeline"
harness = false

[[bench]]
name = "validate_scene"
harness = false

[[bench]]
name = "plan_sync"
harness = false
